# src/router.ts
@@ -18,12 +18,19 @@ import { Next } from "koa";
 import Router from "koa-router";
 import * as promClient from "prom-client";
 
-import { receiptVersion } from "./constants";
 import { MetricRegistry } from "./metricRegistry";
 import { dataItemRoute } from "./routes/dataItemPost";
+import { rootResponse } from "./routes/info";
+import {
+  createMultiPartUpload,
+  finalizeMultipartUploadWithHttpRequest,
+  getMultipartUpload,
+  getMultipartUploadStatus,
+  postDataItemChunk,
+} from "./routes/multiPartUploads";
+import { statusHandler } from "./routes/status";
 import { swaggerDocs, swaggerDocsJSON } from "./routes/swagger";
 import { KoaContext } from "./server";
-import { jwkToPublicArweaveAddress } from "./utils/base64";
 
 const metricsRegistry = MetricRegistry.getInstance().getRegistry();
 promClient.collectDefaultMetrics({ register: metricsRegistry });
@@ -36,28 +43,59 @@ router.post("/tx", dataItemRoute);
 router.post("/v1/tx/:currency", dataItemRoute);
 router.post("/tx/:currency", dataItemRoute);
 
-router.get("/health", (ctx: KoaContext, next: Next) => {
-  ctx.body = "OK";
+/**
+ * START TEMPORARY PATCH TO SUPPORT up.arweave.net
+ */
+router.get("/price/:foo/:bar", (ctx, next: Next) => {
+  ctx.body = "0.0000000000000";
   return next();
 });
 
-router.get("/", async (ctx: KoaContext, next: Next) => {
-  const signingWalletAddress = jwkToPublicArweaveAddress(
-    await ctx.state.getArweaveWallet()
-  );
-  ctx.body = {
-    version: receiptVersion,
-    addresses: {
-      arweave: signingWalletAddress,
-    },
-    gateway: ctx.state.arweaveGateway["endpoint"].hostname,
-  };
+router.get("/price/:bar", (ctx, next: Next) => {
+  ctx.body = "0.0000000000000";
   return next();
 });
+
+router.get("/account/balance/:rest", (ctx: KoaContext, next: Next) => {
+  ctx.body = "99999999999999999999999999999999999999";
+  return next();
+});
+/**
+ * END TEMPORARY PATCH TO SUPPORT up.arweave.net
+ */
+
+// publish at root for backwards compatibility (blunder)
+router.get("/tx/:id/status", statusHandler);
+// publish at v1 for forwards compatibility 🧠
+router.get("/v1/tx/:id/status", statusHandler);
+
+// Multi-part upload routes
+router.get("/chunks/:token/-1/-1", createMultiPartUpload);
+router.get("/chunks/:token/:uploadId/-1", getMultipartUpload);
+router.get("/chunks/:token/:uploadId/status", getMultipartUploadStatus);
+router.post(
+  "/chunks/:token/:uploadId/-1",
+  finalizeMultipartUploadWithHttpRequest
+);
+router.post("/chunks/:token/:uploadId/finalize", (ctx: KoaContext) => {
+  ctx.state.asyncValidation = true;
+  return finalizeMultipartUploadWithHttpRequest(ctx);
+});
+router.post("/chunks/:token/:uploadId/:chunkOffset", postDataItemChunk);
+
+// info routes
+router.get("/", rootResponse);
+router.get("/info", rootResponse);
 
 // Prometheus
 router.get("/bundler_metrics", async (ctx: KoaContext, next: Next) => {
   ctx.body = await metricsRegistry.metrics();
+  return next();
+});
+
+// healthcheck
+router.get("/health", (ctx: KoaContext, next: Next) => {
+  ctx.body = "OK";
   return next();
 });
 
